fix(sqlnode): visitLookup — ITEM dispatch for MAP-typed dotted source
PPL `LOOKUP <table> <map_field> AS <map>.<path> ...` over a MAP-typed
source column (e.g. `LOOKUP table name AS doc.user.name REPLACE title`
where `doc` is MAP-typed from spath auto-extract) failed at the join
condition with "Field [doc.user.name] not found" because the source side
emitted a multi-part identifier `lookup_input.doc.user.name`.

When the mapping source contains a dot AND the prefix is in
frame.mapColumns, emit `ITEM(lookup_input.<map>, '<path>')` for the source
side of the equi-join condition. Mirrors visitReplace/visitFillNull's
MAP-path handling pattern.

Fixes testLookupOnMapPath in CalcitePPLMapPathIT (3 → 2 remaining).
0 regressions across 8+ verified test classes.

Signed-off-by: Peng Huo <penghuo@amazon.com>